@@ -12,8 +12,10 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>17</maven.compiler.source> <!-- Update source to 22 -->
-    <maven.compiler.target>17</maven.compiler.target> <!-- Update target to 22 -->
+    <!-- <maven.compiler.source>17</maven.compiler.source> Update source to 22 -->
+    <!-- <maven.compiler.target>17</maven.compiler.target> Update target to 22 -->
+    <maven.compiler.source>22</maven.compiler.source> 
+    <maven.compiler.target>22</maven.compiler.target> 
     <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
   </properties>
 
@@ -25,9 +27,15 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>5.5.0</version> 
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
-        <version>20240303	</version> <!-- Updated version -->
+        <version>20240303	</version> 
     </dependency>
     <dependency>
       <groupId>com.github.stefanbirkner</groupId>
@@ -59,10 +67,6 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
         </plugin>
-        <!-- <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
-        </plugin> -->
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
@@ -88,7 +92,8 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.2</version>
           <configuration>
-              <argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+            <argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+             <!-- <argLine>-Dnet.bytebuddy.experimental=true</argLine> -->
           </configuration>
         </plugin>
       </plugins>
